My first commit

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,42 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #b4f2e1;
+  box-sizing: border-box;
+  margin: 0%;
+  padding: 0%;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+div{
+  width:100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -30px;
+  
+}
+
+h1{
+  padding: 20px 20px;
+  background-color: #ffe9c5;
+  color: #fa9191;
+  border-radius: 20px;
+}
+
+span{
+  color: #eb6383;
+}
+
+@media screen and (max-width: 480px) {
+  h1{
+    font-size: 25px;
+  }
 }
